tests/negative/test_promo_null_macro.orb
eval (sym m:(mac ()));

fnc main () () {
    sym (p m);
};